[TestLogs]日志测试代码提交，验证log4j和System.out，以及内存溢出是否能输出到log4j